; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/sis/extr_init.c_SiS_ResetSegmentRegisters.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/sis/extr_init.c_SiS_ResetSegmentRegisters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SiS_Private = type { i64 }

@IS_SIS65x = common dso_local global i64 0, align 8
@SIS_661 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.SiS_Private*)* @SiS_ResetSegmentRegisters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SiS_ResetSegmentRegisters(%struct.SiS_Private* %0) #0 {
  %2 = alloca %struct.SiS_Private*, align 8
  store %struct.SiS_Private* %0, %struct.SiS_Private** %2, align 8
  %3 = load i64, i64* @IS_SIS65x, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %11, label %5

5:                                                ; preds = %1
  %6 = load %struct.SiS_Private*, %struct.SiS_Private** %2, align 8
  %7 = getelementptr inbounds %struct.SiS_Private, %struct.SiS_Private* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @SIS_661, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %5, %1
  %12 = load %struct.SiS_Private*, %struct.SiS_Private** %2, align 8
  %13 = call i32 @SiS_ResetSegmentReg(%struct.SiS_Private* %12)
  %14 = load %struct.SiS_Private*, %struct.SiS_Private** %2, align 8
  %15 = call i32 @SiS_ResetSegmentRegOver(%struct.SiS_Private* %14)
  br label %16

16:                                               ; preds = %11, %5
  ret void
}

declare dso_local i32 @SiS_ResetSegmentReg(%struct.SiS_Private*) #1

declare dso_local i32 @SiS_ResetSegmentRegOver(%struct.SiS_Private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
